--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+black==23.1.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
@@ -13,9 +14,13 @@ Jinja2==3.1.2
 joblib==1.2.0
 MarkupSafe==2.1.2
 miniful==0.0.6
+mypy-extensions==1.0.0
 nltk==3.8.1
 numpy==1.24.2
+packaging==23.0
 pandas==1.5.3
+pathspec==0.11.0
+platformdirs==3.0.0
 pyFUME==0.2.25
 python-dateutil==2.8.2
 pytz==2022.7.1
